k8s/ingress-v2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress-v2
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
   - host: "*"
     http:
       paths: 
       - backend:
            serviceName: webapp-v2
            servicePort: 80 
         path: /
